--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,30 @@
 __pycache__
 *.egg-info
 /.direnv
+/config
+*.json
+*.yaml
+
+__pycache__/
+*.py[cod]
+*$py.class
+
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+.pytest_cache/
+
