--- a/docker-compose.sample.yaml
+++ b/docker-compose.sample.yaml
@@ -10,7 +10,8 @@ version: '3'
 
 services:
   tg_searcher:
-    image: sharzy/tg_searcher
+    # image: sharzy/tg_searcher
+    build: .
     container_name: tg_searcher
     restart: unless-stopped
     volumes:
